# cpp_base

./: .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: defines.h  main.cpp
